# video-analytics

./: .gitattributes  README.md  main.py  pyproject.toml  requirements.txt
configs/: annotations.yaml
src/: __init__.py  data_viz.py
