[tool.poetry]
name = "video-analytics"
version = "0.1.0"
description = "Real-time video analysis using computer vision and deep learning"
authors = ["Rustem Galiullin <rustemgal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.3"
opencv-python-headless = "^4.10.0.82"
fiftyone = "^0.24.0"
ultralytics = "^8.2.28"
termcolor = "^2.4.0"
fire = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
